macOS: upgrade to JDK 21